# VidZap

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  test_tools.sh
docs/: 开发计划nicegui.md
src/: main.py
src/core/: cookie_manager.py  db.py  douyin_note.py  download_queue.py  version.py  ytdlp_handler.py
src/pages/: history.py  home.py  settings.py
